add ARIA ,ASCEND, and ALASKA ,modify travelocity.jpg

--- a/2.html
+++ b/2.html
@@ -54,3 +54,61 @@
 
 
 </div>
+<div class="columns features">
+
+        <div class="column is-4" data-target="aria">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/aria.jpg?" alt="aria deals" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>ARIA RESORT & CASINO DEALS</h4>
+                <p>ARIA Las Vegas is the epitome of luxury casino resorts - featuring luxury suites, expansive views of the Las Vegas Strip, while being central to things to do in Las Vegas.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column is-4" data-target="ascend">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/ascend.jpg?" alt="ascend deals" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>ASCEND HOTEL COLLECTION BY CHOICE HOTELS DEALS</h4>
+                <p>The boutique hotels in the Ascend Hotel Collection by Choice Hotels are a wonderful way to "go native" when you're traveling, to feel like you're part of the local scene. Each Ascend hotel is a unique reflection of its local community.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column is-4" data-target="atlantis">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/atlantis.jpg?" alt="atlantis deals" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>ATLANTIS  DEALS</h4>
+                <p>Atlantis Paradise Island, Bahamas is the most popular resort destination in the Caribbean. Visit the world's largest open-air marine habitat, 141-acre Aquaventure Water Park, 11 pools, renowned beaches & golf courses, casino, 21 restaurants & 19 bars.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+</div>
