add autoeurope avianca avidhotels

--- a/2.html
+++ b/2.html
@@ -51,9 +51,8 @@
           </div>
         </div>
 
-
-
 </div>
+
 <div class="columns features">
 
         <div class="column is-4" data-target="aria">
@@ -107,8 +106,59 @@
           </div>
         </div>
 
+</div>
 
+<div class="columns features">
 
+        <div class="column is-4" data-target="autoeurope">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/autoeurope.jpg?" alt="autoeurope deals" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>AUTO EUROPE CAR RENTALS DEALS</h4>
+                <p>Auto Europe is a leader in worldwide car rental with relationships with top suppliers like Hertz, Avis, Enterprise, Europcar, National, Budget, Dollar, Buchbinder & Peugeot proving travelers the best rates at 20k pickup locations in over 180 countries.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
 
+        <div class="column is-4" data-target="avianca">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/avianca.jpg?" alt="avianca deals" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>AVIANCA DEALS</h4>
+                <p>Avianca is the leading airline in Latin America, offers direct flights to more than 105 destinations in 26 countries in America and Europe and has more than 175 aircraft.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column is-4" data-target="avidhotels">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="./images/avidhotels.jpg?" alt="avidhotels deals" class="modal-button" >
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>AVID HOTELS  DEALS</h4>
+                <p>Avid Hotels by InterContinental Hotels Group promises a great night's sleep in a clean room. Free, high-quality, grab-and-go breakfast. Modern design and friendly service that’s there whenever you need it.</p>
+                <span class="button is-link modal-button">CHECKOUT</span>
+              </div>
+            </div>
+          </div>
+        </div>
 
 </div>
