add avis, backwoods, ballys-las-vegas, favicon and sort products

--- a/2.html
+++ b/2.html
@@ -1,164 +1,221 @@
 <div class="columns features">
 
-        <div class="column is-4" data-target="accorhotels">
-          <div class="card is-shady">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="./images/accorhotels.jpg?" alt="accorhotels deals" class="modal-button" >
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="content">
-                <h4>ALL - ACCOR LIVE LIMITLESS DEALS</h4>
-                <p>With over 4,000 hotels in 95 countries, 20 hotel brands from luxury to budget, Accorhotels offers one of the world's most recognized and respected hospitality brands such as Sofitel, Rafflers, Novotel, Pullman, Mercure, ibis, and more.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
-              </div>
-            </div>
-          </div>
+  <div class="column is-4 modal-button" data-target="airportrentalcars">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/airportrentalcars.jpg?" alt="airportrentalcars deals" >
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="content">
+          <h4>AIRPORTRENTALCARS DEALS</h4>
+          <p>AirportRentalCars.com is a leading site for online rental car reservations with over 25 rental car brands. They offer low prices on rental cars from Alamo, Avis, Budget, Dollar, Enterprise, Hertz, National, Thrifty, etc. for all types of rentals.</p>
+          <span class="button is-link modal-button" >CHECKOUT</span>
         </div>
+      </div>
+    </div>
+  </div>
 
-        <div class="column is-4" data-target="anantara">
-          <div class="card is-shady">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="./images/anantara.jpg?" alt="anantara deals" class="modal-button" >
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="content">
-                <h4>ANANTARA HOTELS, RESORTS & SPAS DEALS</h4>
-                <p>Anantara Hotels & Resorts is one of the top 20 resorts groups in Asia. All its properties are placed in spectacular locations with sophisticated room and suits including a wide range of modern amenities.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
-              </div>
-            </div>
-          </div>
+  <div class="column is-4" data-target="alamo">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/alamo.jpg" alt="alamo deals" class="modal-button" >
+        </figure>
+      </div>
+      <div class="card-content  modal-button">
+        <div class="content">
+          <h4>ALAMO RENT A CAR DEALS</h4>
+          <p>Looking for a car rental deal? Join Alamo Insiders. Find discounts, coupons, and last minute specials from Alamo Rent A Car.</p>
+          <span class="button is-link modal-button">CHECKOUT</span>
         </div>
+      </div>
+    </div>
+  </div>
 
-        <div class="column is-4" data-target="applevacations">
-          <div class="card is-shady">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="./images/applevacations.jpg?" alt="applevacations deals" class="modal-button" >
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="content">
-                <h4>APPLE VACATIONS DEALS</h4>
-                <p>Apple Vacations is the nation's largest provider of Non-stop Exclusive Vacation Flights. The Apple Vacations robust product line includes popular vacation destinations throughout Mexico, the Caribbean, the Hawaiian Islands, Central America, and South America.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
-              </div>
-            </div>
-          </div>
+  <div class="column is-4" data-target="alaskaairmiles">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/alaskaairmiles.jpg" alt="alaskaairmiles deals" class="modal-button" >
+        </figure>
+      </div>
+      <div class="card-content  modal-button">
+        <div class="content">
+          <h4>ALASKA AIR POINTS DEALS</h4>
+          <p>The Alaska Airlines Points program run by Points.com makes it easy to purchase or give Alaska Airlines Mileage Plan Miles to help help you earn free flights on Alaska Airlines.</p>
+          <span class="button is-link modal-button">CHECKOUT</span>
         </div>
+      </div>
+    </div>
+  </div>
 
 </div>
 
 <div class="columns features">
 
-        <div class="column is-4" data-target="aria">
-          <div class="card is-shady">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="./images/aria.jpg?" alt="aria deals" class="modal-button" >
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="content">
-                <h4>ARIA RESORT & CASINO DEALS</h4>
-                <p>ARIA Las Vegas is the epitome of luxury casino resorts - featuring luxury suites, expansive views of the Las Vegas Strip, while being central to things to do in Las Vegas.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
-              </div>
-            </div>
-          </div>
+  <div class="column is-4 modal-button" data-target="airportlax">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/airportlax.jpg?" alt="airportlax deals" >
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="content">
+          <h4>AIRPORT LAX DEALS</h4>
+          <p>Book long-term parking for airports from airport lax. Search airport parking with rates up to 70% off. AirportLAX.com has the most airport parking options.</p>
+          <span class="button is-link modal-button" >CHECKOUT</span>
         </div>
+      </div>
+    </div>
+  </div>
 
-        <div class="column is-4" data-target="ascend">
-          <div class="card is-shady">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="./images/ascend.jpg?" alt="ascend deals" class="modal-button" >
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="content">
-                <h4>ASCEND HOTEL COLLECTION BY CHOICE HOTELS DEALS</h4>
-                <p>The boutique hotels in the Ascend Hotel Collection by Choice Hotels are a wonderful way to "go native" when you're traveling, to feel like you're part of the local scene. Each Ascend hotel is a unique reflection of its local community.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
-              </div>
-            </div>
-          </div>
+  <div class="column is-4" data-target="airportparkingreservations">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/airportparkingreservations.jpg?" alt="airportparkingreservations" class="modal-button" >
+        </figure>
+      </div>
+      <div class="card-content  modal-button">
+        <div class="content">
+          <h4>AIRPORT PARKING RESERVATIONS DEALS</h4>
+          <p>Airport Parking Reservations allows you to compare and save on airport parking for every major airport in the US with multiple parking options & free transportation. All options included - self-drive, valet, indoor & long term.</p>
+          <span class="button is-link modal-button">CHECKOUT</span>
         </div>
+      </div>
+    </div>
+  </div>
 
-        <div class="column is-4" data-target="atlantis">
-          <div class="card is-shady">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="./images/atlantis.jpg?" alt="atlantis deals" class="modal-button" >
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="content">
-                <h4>ATLANTIS  DEALS</h4>
-                <p>Atlantis Paradise Island, Bahamas is the most popular resort destination in the Caribbean. Visit the world's largest open-air marine habitat, 141-acre Aquaventure Water Park, 11 pools, renowned beaches & golf courses, casino, 21 restaurants & 19 bars.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
-              </div>
-            </div>
-          </div>
+  <div class="column is-4" data-target="airportparking">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/airportparking.jpg?" alt="airportparking deals" class="modal-button" >
+        </figure>
+      </div>
+      <div class="card-content  modal-button">
+        <div class="content">
+          <h4>AIRPORTPARKING.COM DEALS</h4>
+          <p>AirportParking offers travelers the chance to compare & save on airport parking for every major airport in the US with multiple parking options & free transportation. Parking options include self-drive, valet, indoor & long term.</p>
+          <span class="button is-link modal-button">CHECKOUT</span>
         </div>
+      </div>
+    </div>
+  </div>
 
 </div>
 
 <div class="columns features">
 
-        <div class="column is-4" data-target="autoeurope">
-          <div class="card is-shady">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="./images/autoeurope.jpg?" alt="autoeurope deals" class="modal-button" >
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="content">
-                <h4>AUTO EUROPE CAR RENTALS DEALS</h4>
-                <p>Auto Europe is a leader in worldwide car rental with relationships with top suppliers like Hertz, Avis, Enterprise, Europcar, National, Budget, Dollar, Buchbinder & Peugeot proving travelers the best rates at 20k pickup locations in over 180 countries.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
-              </div>
-            </div>
-          </div>
+  <div class="column is-4 modal-button" data-target="rvshare">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/rvshare.jpg?" alt="rvshare deals" >
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="content">
+          <h4>RVSHARE DEALS</h4>
+          <p>If you’re thinking about going on a cross country road trip, camping, or renting an RV for a special event, RVshare makes the whole process simple, easy, and fun!</p>
+          <span class="button is-link modal-button">CHECKOUT</span>
         </div>
+      </div>
+    </div>
+  </div>
 
-        <div class="column is-4" data-target="avianca">
-          <div class="card is-shady">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="./images/avianca.jpg?" alt="avianca deals" class="modal-button" >
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="content">
-                <h4>AVIANCA DEALS</h4>
-                <p>Avianca is the leading airline in Latin America, offers direct flights to more than 105 destinations in 26 countries in America and Europe and has more than 175 aircraft.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
-              </div>
-            </div>
-          </div>
+  <div class="column is-4" data-target="adrenaline">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/adrenaline.jpg?" alt="adrenaline deals" class="modal-button" >
+        </figure>
+      </div>
+      <div class="card-content  modal-button">
+        <div class="content">
+          <h4>ADRENLINE DEALS</h4>
+          <p>Adrenline offers the largest range of experience activities in the country.Some of the top experiences include: Helicopter Tours, Skydiving, Hot Air Balloon Rides, Pilot Lessons, Ziplining, NASCAR Drive and Rides</p>
+          <span class="button is-link modal-button">CHECKOUT</span>
         </div>
+      </div>
+    </div>
+  </div>
 
-        <div class="column is-4" data-target="avidhotels">
-          <div class="card is-shady">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="./images/avidhotels.jpg?" alt="avidhotels deals" class="modal-button" >
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="content">
-                <h4>AVID HOTELS  DEALS</h4>
-                <p>Avid Hotels by InterContinental Hotels Group promises a great night's sleep in a clean room. Free, high-quality, grab-and-go breakfast. Modern design and friendly service that’s there whenever you need it.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
-              </div>
-            </div>
-          </div>
+  <div class="column is-4" data-target="flyingblue">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/flyingblue.jpg?" alt="flyingblue deals" class="modal-button" >
+        </figure>
+      </div>
+      <div class="card-content  modal-button">
+        <div class="content">
+          <h4>AIR FRANCE KLM POINTS DEALS</h4>
+          <p>The Flying Blue Points program run by Points.com makes it easy to purchase or give Air France and KLM miles and points to help help you earn free flights or upgrades faster on your favorite airlines.</p>
+          <span class="button is-link modal-button">CHECKOUT</span>
         </div>
+      </div>
+    </div>
+  </div>
 
 </div>
+
+<div class="columns features">
+
+  <div class="column is-4" data-target="flighthub">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/flighthub.jpg" alt="flighthub deals" class="modal-button" >
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="content">
+          <h4>FLIGHTHUB DEALS</h4>
+          <p>FlightHub is one of the best sites to plan, book and manage your travel plans! All flight itineraries are compared instantly, giving you the cheapest flights and best ticket deals available online!</p>
+          <span class="button is-link modal-button">BOOK NOW</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="column is-4" data-target="travelocity">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/travelocity.jpg?v=1" alt="travelocity deals" >
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="content">
+          <h4>TRAVELOCITY DEALS</h4>
+          <p>Travelocity is a 'one-stop shop' for customers looking to purchase travel. Book all your travel, flights, hotels, vacations and cruises directly with Travelocity.</p>
+          <span class="button is-link modal-button">CHECKOUT</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="column is-4 modal-button" data-target="clearme">
+    <div class="card is-shady">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="./images/clear.jpg?" alt="clear deals">
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="content">
+          <h4>CLEAR DEALS</h4>
+          <p>By transforming your biometrics - like your eyes and face - into a single touchless ID, you can rely on CLEAR for a faster, safer experience, every time. CLEAR keeps you moving, without contact or crowds. Find CLEAR in 65+ airports, sports venues.</p>
+          <span class="button is-link modal-button">CHECKOUT</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
