--- a/2.html
+++ b/2.html
@@ -11,7 +11,7 @@
         <div class="content">
           <h4>AIRPORTRENTALCARS DEALS</h4>
           <p>AirportRentalCars.com is a leading site for online rental car reservations with over 25 rental car brands. They offer low prices on rental cars from Alamo, Avis, Budget, Dollar, Enterprise, Hertz, National, Thrifty, etc. for all types of rentals.</p>
-          <span class="button is-link modal-button" >CHECKOUT</span>
+          <span class="button is-link modal-button" >CHECK IT OUT</span>
         </div>
       </div>
     </div>
@@ -28,7 +28,7 @@
         <div class="content">
           <h4>ALAMO RENT A CAR DEALS</h4>
           <p>Looking for a car rental deal? Join Alamo Insiders. Find discounts, coupons, and last minute specials from Alamo Rent A Car.</p>
-          <span class="button is-link modal-button">CHECKOUT</span>
+          <span class="button is-link modal-button">CHECK IT OUT</span>
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
         <div class="content">
           <h4>ALASKA AIR POINTS DEALS</h4>
           <p>The Alaska Airlines Points program run by Points.com makes it easy to purchase or give Alaska Airlines Mileage Plan Miles to help help you earn free flights on Alaska Airlines.</p>
-          <span class="button is-link modal-button">CHECKOUT</span>
+          <span class="button is-link modal-button">CHECK IT OUT</span>
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
         <div class="content">
           <h4>AIRPORT LAX DEALS</h4>
           <p>Book long-term parking for airports from airport lax. Search airport parking with rates up to 70% off. AirportLAX.com has the most airport parking options.</p>
-          <span class="button is-link modal-button" >CHECKOUT</span>
+          <span class="button is-link modal-button" >CHECK IT OUT</span>
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
         <div class="content">
           <h4>AIRPORT PARKING RESERVATIONS DEALS</h4>
           <p>Airport Parking Reservations allows you to compare and save on airport parking for every major airport in the US with multiple parking options & free transportation. All options included - self-drive, valet, indoor & long term.</p>
-          <span class="button is-link modal-button">CHECKOUT</span>
+          <span class="button is-link modal-button">CHECK IT OUT</span>
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
         <div class="content">
           <h4>AIRPORTPARKING.COM DEALS</h4>
           <p>AirportParking offers travelers the chance to compare & save on airport parking for every major airport in the US with multiple parking options & free transportation. Parking options include self-drive, valet, indoor & long term.</p>
-          <span class="button is-link modal-button">CHECKOUT</span>
+          <span class="button is-link modal-button">CHECK IT OUT</span>
         </div>
       </div>
     </div>
@@ -121,7 +121,7 @@
         <div class="content">
           <h4>RVSHARE DEALS</h4>
           <p>If you’re thinking about going on a cross country road trip, camping, or renting an RV for a special event, RVshare makes the whole process simple, easy, and fun!</p>
-          <span class="button is-link modal-button">CHECKOUT</span>
+          <span class="button is-link modal-button">CHECK IT OUT</span>
         </div>
       </div>
     </div>
@@ -138,7 +138,7 @@
         <div class="content">
           <h4>ADRENLINE DEALS</h4>
           <p>Adrenline offers the largest range of experience activities in the country.Some of the top experiences include: Helicopter Tours, Skydiving, Hot Air Balloon Rides, Pilot Lessons, Ziplining, NASCAR Drive and Rides</p>
-          <span class="button is-link modal-button">CHECKOUT</span>
+          <span class="button is-link modal-button">CHECK IT OUT</span>
         </div>
       </div>
     </div>
@@ -155,7 +155,7 @@
         <div class="content">
           <h4>AIR FRANCE KLM POINTS DEALS</h4>
           <p>The Flying Blue Points program run by Points.com makes it easy to purchase or give Air France and KLM miles and points to help help you earn free flights or upgrades faster on your favorite airlines.</p>
-          <span class="button is-link modal-button">CHECKOUT</span>
+          <span class="button is-link modal-button">CHECK IT OUT</span>
         </div>
       </div>
     </div>
@@ -193,7 +193,7 @@
         <div class="content">
           <h4>TRAVELOCITY DEALS</h4>
           <p>Travelocity is a 'one-stop shop' for customers looking to purchase travel. Book all your travel, flights, hotels, vacations and cruises directly with Travelocity.</p>
-          <span class="button is-link modal-button">CHECKOUT</span>
+          <span class="button is-link modal-button">CHECK IT OUT</span>
         </div>
       </div>
     </div>
@@ -210,7 +210,7 @@
         <div class="content">
           <h4>CLEAR DEALS</h4>
           <p>By transforming your biometrics - like your eyes and face - into a single touchless ID, you can rely on CLEAR for a faster, safer experience, every time. CLEAR keeps you moving, without contact or crowds. Find CLEAR in 65+ airports, sports venues.</p>
-          <span class="button is-link modal-button">CHECKOUT</span>
+          <span class="button is-link modal-button">CHECK IT OUT</span>
         </div>
       </div>
     </div>
