--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="content">
                 <h4>AVIS DEALS</h4>
                 <p>Avis Car Rental operates one of the world's best-known car rental brands with over 5,000 locations in more than 165 countries. Avis is an innovator in the car rental industry & is one of the world's top brands for customer loyalty.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
               <div class="content">
                 <h4>BACKWOODS.COM DEALS</h4>
                 <p>Backwoods.com provides clothing, equipment and expertise to help customers fulfill their needs for most of life’s great adventures: hiking, trekking, fishing, climbing, camping, kayaking, paddling, hunting and more!</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
               <div class="content">
                 <h4>BALLY'S LAS VEGAS DEALS</h4>
                 <p>Bally's Las Vegas Hotel and Casino is located at the heart of the Strip and one of the 1st Las Vegas hotels to spring up at the famed "Four Corners", where the strip meets flamingo road made up of Caesars Palace, Bellagio, Bally's, and Barbary Coast.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -112,7 +112,7 @@
               <div class="content">
                 <h4>AUTO EUROPE CAR RENTALS DEALS</h4>
                 <p>Auto Europe is a leader in worldwide car rental with relationships with top suppliers like Hertz, Avis, Enterprise, Europcar, National, Budget, Dollar, Buchbinder & Peugeot proving travelers the best rates at 20k pickup locations in over 180 countries.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -129,7 +129,7 @@
               <div class="content">
                 <h4>AVIANCA DEALS</h4>
                 <p>Avianca is the leading airline in Latin America, offers direct flights to more than 105 destinations in 26 countries in America and Europe and has more than 175 aircraft.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -146,7 +146,7 @@
               <div class="content">
                 <h4>AVID HOTELS  DEALS</h4>
                 <p>Avid Hotels by InterContinental Hotels Group promises a great night's sleep in a clean room. Free, high-quality, grab-and-go breakfast. Modern design and friendly service that’s there whenever you need it.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -167,7 +167,7 @@
               <div class="content">
                 <h4>ARIA RESORT & CASINO DEALS</h4>
                 <p>ARIA Las Vegas is the epitome of luxury casino resorts - featuring luxury suites, expansive views of the Las Vegas Strip, while being central to things to do in Las Vegas.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -184,7 +184,7 @@
               <div class="content">
                 <h4>ASCEND HOTEL COLLECTION BY CHOICE HOTELS DEALS</h4>
                 <p>The boutique hotels in the Ascend Hotel Collection by Choice Hotels are a wonderful way to "go native" when you're traveling, to feel like you're part of the local scene. Each Ascend hotel is a unique reflection of its local community.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -201,7 +201,7 @@
               <div class="content">
                 <h4>ATLANTIS  DEALS</h4>
                 <p>Atlantis Paradise Island, Bahamas is the most popular resort destination in the Caribbean. Visit the world's largest open-air marine habitat, 141-acre Aquaventure Water Park, 11 pools, renowned beaches & golf courses, casino, 21 restaurants & 19 bars.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
               <div class="content">
                 <h4>ALL - ACCOR LIVE LIMITLESS DEALS</h4>
                 <p>With over 4,000 hotels in 95 countries, 20 hotel brands from luxury to budget, Accorhotels offers one of the world's most recognized and respected hospitality brands such as Sofitel, Rafflers, Novotel, Pullman, Mercure, ibis, and more.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -239,7 +239,7 @@
               <div class="content">
                 <h4>ANANTARA HOTELS, RESORTS & SPAS DEALS</h4>
                 <p>Anantara Hotels & Resorts is one of the top 20 resorts groups in Asia. All its properties are placed in spectacular locations with sophisticated room and suits including a wide range of modern amenities.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
@@ -256,7 +256,7 @@
               <div class="content">
                 <h4>APPLE VACATIONS DEALS</h4>
                 <p>Apple Vacations is the nation's largest provider of Non-stop Exclusive Vacation Flights. The Apple Vacations robust product line includes popular vacation destinations throughout Mexico, the Caribbean, the Hawaiian Islands, Central America, and South America.</p>
-                <span class="button is-link modal-button">CHECKOUT</span>
+                <span class="button is-link modal-button">CHECK IT OUT</span>
               </div>
             </div>
           </div>
